# rust-ios-demo

./: Cargo.toml  README.md  build.rs  uniffi.toml
rust-ios-test-2/: xc-universal-binary.sh
rust-ios-test-2/rust-ios-test-2/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift  rust-ios-test-2-Bridging-Header.h
rust-ios-test-2/rust-ios-test-2.xcodeproj/: project.pbxproj
rust-ios-test-2/rust-ios-test-2.xcodeproj/project.xcworkspace/xcuserdata/stefano.xcuserdatad/: UserInterfaceState.xcuserstate
rust-ios-test-2/rust-ios-test-2.xcodeproj/xcuserdata/stefano.xcuserdatad/xcschemes/: xcschememanagement.plist
rust-ios-test-2/rust-ios-test-2Tests/: rust_ios_test_2Tests.swift
rust-ios-test-2/rust-ios-test-2UITests/: rust_ios_test_2UITests.swift  rust_ios_test_2UITestsLaunchTests.swift
src/: lib.rs  todolist.swift  todolist.udl  todolistFFI.h
