[package]
name = "todolist"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "todolist"

[dependencies]
uniffi = "0.23.0"
thiserror = "1.0"
once_cell = "1.12"

[build-dependencies]
uniffi = { version = "0.23.0", features = [ "build" ] }

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"